# brisk

./: .gitignore  README.md  pyproject.toml  report.css
.github/: pull_request_template.md
.github/workflows/: check_pr_source.yml  ci.yml  pr_test.yml
docs/: requirements.txt
docs/source/: _api_objects_table.rst  _builtin_objects_table.rst  _cli_objects_table.rst  _configuration_objects_table.rst  _data_objects_table.rst  _descriptions.py  _evaluation_objects_table.rst  _reporting_objects_table.rst  _services_objects_table.rst  _theme_objects_table.rst  _training_objects_table.rst  conf.py  index.rst
frameworks/: regression_framework.py
src/brisk/: __init__.py  cli.py  version.py
src/brisk/cli/: cli.py  (+2 more)
src/ml_toolkit/: __init__.py
tests/: conftest.py  result_structure.py
tests/config/: test_metric_manager.py  test_model_warpper.py  test_regression_metrics.py  test_scoring_manager.py
tests/configuration/: test_configuration.py  test_configuration_manager.py  test_experiment.py  test_experiment_factory.py  test_experiment_group.py
tests/data/: test_DataSplitter.py  test_data_manager.py  test_data_split_info.py
tests/data_splitting/: test_data_splitter.py
tests/defaults/: test_regression_metrics.py
tests/e2e/: conftest.py  e2e_setup.py  test_e2e.py
tests/evaluation/: test_EvaluationManager.py  test_evaluation_manager.py  test_metric_manager.py
tests/integration/: test_multiple_workflows.py
tests/reporting/: test_ReportManager.py  test_report_manager.py
tests/training/: test_training_manager.py  test_workflow.py
workflows/: regression.py
(+347 files in other folders)
