[tool.poetry]
name = "brisk"
version = "0.0.1"
description = ""
authors = ["BFieguth <bfieguth@uoguelph.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
jinja2 = "^3.1.4"
tqdm="^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brisk = "brisk.cli:cli"
